# metac-bot-template

./: .env.template  README.md  main.py  main_with_no_framework_gemini.py  main_with_no_framwork_gemini.py  pyproject.toml
.github/workflows/: run_bot_on_tournament.yaml  test_bot.yaml
gemini_forecast_reports_no_framework/: report_post14333_q14333_20250406_114451.md  report_post22427_q22427_20250406_114452.md  report_post578_q578_20250406_114450.md
